--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="scripts/main.js"></script>
+    <script src="src/scripts/text.js"></script>
+    <script src="src/scripts/main.js"></script>
 </body>
 </html>
