--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <script src="src/scripts/text.js"></script>
-    <script src="src/scripts/main.js"></script>
+    <input title="Choose your decision..." placeholder="Type your choice here."></input>
+    <p>Skibidi Toilet</p>
+    <script src="src/scripts/init.js"></script>
 </body>
+
 </html>
