--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
 <body>
     <input title="Choose your decision..." placeholder="Type your choice here."></input>
-    <p>Skibidi Toilet</p>
-    <script src="src/scripts/init.js"></script>
+    <div id="running-modules"></div>
+    
+    <script defer src="src/scripts/init.js"></script>
 </body>
 
 </html>
