added a lot, reminder to commit smaller changes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <input title="Choose your decision..." placeholder="Type your choice here."></input>
     <div id="running-modules"></div>
     
+    <script defer src="src/components/classes.js"></script>
     <script defer src="src/scripts/init.js"></script>
 </body>
 
