added sum things

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div id="running-modules"></div>
     
     <script defer src="src/components/classes.js"></script>
+    <script defer src="src/components/items.js"></script>
     <script defer src="src/scripts/init.js"></script>
 </body>
 
