more vector2 stuff

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     
     <script defer src="src/components/classes.js"></script>
     <script defer src="src/components/items.js"></script>
+    <script defer src="src/components/map.js"></script>
     <script defer src="src/scripts/init.js"></script>
 </body>
 
